deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app-container
          image: docker.io/devopsfordevelopers/devops-demo:java-app-1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
