deploy/service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service-np
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - port: 80
      targetPort: 8090
      nodePort: 30090
