deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: react-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80

# add entry of ip addres -> host
# minikube ip
# sudo vim /etc/hosts
# example:
# 192.168.49.2   react-app.com
